--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,9 @@ img {
   /* Prevent iOS from applying automatic orientation */
   image-orientation: none;
   -webkit-image-orientation: none;
+  pointer-events: none;
+  user-drag: none;
+  -webkit-user-drag: none;
 }
 
 .map-container {
@@ -48,5 +51,10 @@ img {
   -webkit-backface-visibility: hidden;
   perspective: 1000;
   -webkit-perspective: 1000;
+  touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
